loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:5: error: 'while' expected but '}' found.
	}
        ^